--- a/sample/Nice.Leaf.ConsoleDemo/Nice.Leaf.ConsoleDemo.csproj
+++ b/sample/Nice.Leaf.ConsoleDemo/Nice.Leaf.ConsoleDemo.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="1.50.5" />
+    <PackageReference Include="MySql.Data" Version="6.10.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\Nice.Leaf\Nice.Leaf.csproj" />
   </ItemGroup>
 
