添加签名证书

--- a/src/Nice.Leaf/Nice.Leaf.csproj
+++ b/src/Nice.Leaf/Nice.Leaf.csproj
@@ -11,6 +11,8 @@
     <RepositoryType>GIT</RepositoryType>
     <PackageTags>Nice snowflake leaf distribute</PackageTags>
     <PackageReleaseNotes>support Id Generator algorithm by MeiTuan Leaf</PackageReleaseNotes>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>Nice.pfx</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
