--- a/src/Nice.Snowflake/Nice.Snowflake.csproj
+++ b/src/Nice.Snowflake/Nice.Snowflake.csproj
@@ -10,11 +10,12 @@
     <PackageProjectUrl>https://github.com/sampsonye/Nice</PackageProjectUrl>
     <RepositoryUrl>https://github.com/sampsonye/Nice</RepositoryUrl>
     <RepositoryType>GIT</RepositoryType>
-    <PackageReleaseNotes>support snowflake</PackageReleaseNotes>
+    <PackageReleaseNotes>add LICENSE</PackageReleaseNotes>
     <PackageTags>Nice snowflake distribute</PackageTags>
     <Copyright>Sampson</Copyright>
-    <Version>1.0.2</Version>
+    <Version>1.0.3</Version>
     <PackageIconUrl>https://github.com/sampsonye/Nice/raw/master/Nice.png</PackageIconUrl>
+    <PackageLicenseUrl>https://github.com/sampsonye/Nice/blob/master/LICENSE.txt</PackageLicenseUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
