--- a/sample/Nice.Leaf.ConsoleDemo/Nice.Leaf.ConsoleDemo.csproj
+++ b/sample/Nice.Leaf.ConsoleDemo/Nice.Leaf.ConsoleDemo.csproj
@@ -1,17 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net6.0</TargetFramework>
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Dapper" Version="1.50.5" />
-    <PackageReference Include="MySql.Data" Version="6.10.8" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Dapper" Version="1.50.5" />
+		<PackageReference Include="MySql.Data" Version="6.10.8" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\Nice.Leaf\Nice.Leaf.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\src\Nice.Leaf\Nice.Leaf.csproj" />
+	</ItemGroup>
 
 </Project>
