--- a/sample/Nice.Snowflake.ConsoleDemo/Nice.Snowflake.ConsoleDemo.csproj
+++ b/sample/Nice.Snowflake.ConsoleDemo/Nice.Snowflake.ConsoleDemo.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net6.0</TargetFramework>
+		<IsPackable>false</IsPackable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\Nice.Snowflake\Nice.Snowflake.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\..\src\Nice.Snowflake\Nice.Snowflake.csproj" />
+	</ItemGroup>
 
 </Project>
